--- a/artemis/login.config
+++ b/artemis/login.config
@@ -1,13 +1,25 @@
 console {
-  org.keycloak.adapters.jaas.BearerTokenLoginModule required
-    keycloak-config-file="${artemis.instance}/etc/keycloak-bearer-token.json"
+  org.apache.activemq.artemis.spi.core.security.jaas.PropertiesLoginModule sufficient
+    org.apache.activemq.jaas.properties.user="artemis-users.properties"
+    org.apache.activemq.jaas.properties.role="artemis-roles.properties"
+    baseDir="/home/jboss/amq-broker/etc"
+  ;
+
+  org.keycloak.adapters.jaas.BearerTokenLoginModule sufficient
+    keycloak-config-file="/amq/extra/secrets/oidc-jaas-config/_keycloak-bearer-token.json"
     role-principal-class=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal
   ;
 };
 
 activemq {
-  org.keycloak.adapters.jaas.DirectAccessGrantsLoginModule required
-    keycloak-config-file="${artemis.instance}/etc/keycloak-direct-access.json"
+  org.apache.activemq.artemis.spi.core.security.jaas.PropertiesLoginModule sufficient
+    org.apache.activemq.jaas.properties.user="artemis-users.properties"
+    org.apache.activemq.jaas.properties.role="artemis-roles.properties"
+    baseDir="/home/jboss/amq-broker/etc"
+  ;
+
+  org.keycloak.adapters.jaas.DirectAccessGrantsLoginModule sufficient
+    keycloak-config-file="/amq/extra/secrets/oidc-jaas-config/_keycloak-direct-access.json"
     role-principal-class=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal
   ;
 
