--- a/.gitignore
+++ b/.gitignore
@@ -326,3 +326,6 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/maven,java,netbeans,eclipse,intellij,visualstudiocode,windows,osx,linux
 
 artemis/bin/
+artemis/tls/
+
+keycloak/tls/
