--- a/artemis/login.config
+++ b/artemis/login.config
@@ -5,10 +5,12 @@ console {
     baseDir="/home/jboss/amq-broker/etc"
   ;
 
-  org.keycloak.adapters.jaas.BearerTokenLoginModule sufficient
+  /*
+  org.keycloak.adapters.jaas.BearerTokenLoginModule required
     keycloak-config-file="/amq/extra/secrets/oidc-jaas-config/_keycloak-bearer-token.json"
     role-principal-class=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal
   ;
+  */
 };
 
 activemq {
@@ -18,12 +20,12 @@ activemq {
     baseDir="/home/jboss/amq-broker/etc"
   ;
 
-  org.keycloak.adapters.jaas.DirectAccessGrantsLoginModule sufficient
+  org.keycloak.adapters.jaas.DirectAccessGrantsLoginModule required
     keycloak-config-file="/amq/extra/secrets/oidc-jaas-config/_keycloak-direct-access.json"
     role-principal-class=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal
   ;
 
-  org.apache.activemq.artemis.spi.core.security.jaas.PrincipalConversionLoginModule required
+  org.apache.activemq.artemis.spi.core.security.jaas.PrincipalConversionLoginModule requisite
     principalClassList=org.keycloak.KeycloakPrincipal
   ;
 };
