--- a/.gitignore
+++ b/.gitignore
@@ -327,5 +327,8 @@ $RECYCLE.BIN/
 
 artemis/bin/
 artemis/tls/
+artemis/keycloak-bearer-token.json
+artemis/keycloak-direct-access.json
+artemis/keycloak-js-client.json
 
 keycloak/tls/
