--- a/artemis/keycloak-bearer-token.template
+++ b/artemis/keycloak-bearer-token.template
@@ -4,6 +4,8 @@
   "auth-server-url": "https://keycloak-ingress-keycloak.${KC_DOMAIN}/",
   "principal-attribute": "preferred_username",
   "use-resource-role-mappings": true,
-  "ssl-required": "none",
+  "ssl-required": "external",
+  "truststore": "${artemis.instance}/etc/broker.ts",
+  "truststore-password": "password",
   "confidential-port": 443
 }
