--- a/artemis/spoke-01-broker.yaml
+++ b/artemis/spoke-01-broker.yaml
@@ -19,35 +19,51 @@ spec:
       requests:
         cpu: "1000m"
         memory: "2Gi"
+    extraMounts:
+      secrets:
+        - "oidc-jaas-config"
   acceptors:
     - name: amqp-acceptor
       protocols: amqp
       port: 5672
+    - name: amqps-acceptor
+      protocols: amqp
+      port: 5671
+      sslEnabled: true
+      sslSecret: broker-tls-secret
+      needClientAuth: false
+      expose: true
     - name: mqtt-acceptor
       protocols: mqtt
       port: 1833
-  env:
-    - name: JAVA_ARGS_APPEND
-      value: "-Dhawtio.realm=console -Dhawtio.keycloakEnabled=true -Dhawtio.authenticationEnabled=true -Dhawtio.rolePrincipalClasses=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal -Dhawtio.keycloakClientConfig=/amq/extra/secrets/oidc-jaas-config/_keycloak-js-client.json"
-  extraMounts:
-    secrets:
-      - "oidc-jaas-config"
+    - name: mqtts-acceptor
+      protocols: mqtt
+      port: 8883
+      sslEnabled: true
+      sslSecret: broker-tls-secret
+      needClientAuth: false
+      expose: true
+#  env:
+#    - name: JAVA_ARGS_APPEND
+#      value: "-Dhawtio.realm=console -Dhawtio.keycloakEnabled=true -Dhawtio.authenticationEnabled=true -Dhawtio.rolePrincipalClasses=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal -Dhawtio.keycloakClientConfig=/amq/extra/secrets/oidc-jaas-config/_keycloak-js-client.json"
   console:
     expose: true
     requireLogin: true
   brokerProperties:
     - "globalMaxSize=1GiB"
     - "clusterConfigurations.my-cluster.messageLoadBalancingType=OFF"
-    - "acceptorConfigurations.new-acceptor.params.sslAutoReload=true"
 
-    - "connectorConfigurations.hub-01-federation-connector.params.host=${HUB01_HOST}"
-    - "connectorConfigurations.hub-01-federation-connector.params.port=${HUB01_PORT}"
+    - "acceptorConfigurations.amqps-acceptor.params.sslAutoReload=true"
+    - "acceptorConfigurations.mqtts-acceptor.params.sslAutoReload=true"
+
+    - "connectorConfigurations.hub-01-federation-connector.params.host=hub-01-broker-amqps-0-svc-rte-artemis.${HUB01_DOMAIN}"
+    - "connectorConfigurations.hub-01-federation-connector.params.port=443"
     - "connectorConfigurations.hub-01-federation-connector.params.sslEnabled=true"
     - "connectorConfigurations.hub-01-federation-connector.params.trustStorePath=/etc/artemis-broker-tls-secret-volume/client.ts"
     - "connectorConfigurations.hub-01-federation-connector.params.trustStorePassword=password"
 
-    - "federationConfigurations.hub-01.credentials.user=${HUB01_USER}"
-    - "federationConfigurations.hub-01.credentials.password=${HUB01_PASS}"
+    - "federationConfigurations.hub-01.credentials.user=admin"
+    - "federationConfigurations.hub-01.credentials.password=admin"
     - "federationConfigurations.hub-01.upstreamConfigurations.hub-01.connectionConfiguration.staticConnectors=hub-01-federation-connector"
     - "federationConfigurations.hub-01.upstreamConfigurations.hub-01.connectionConfiguration.retryInterval=500"
     - "federationConfigurations.hub-01.upstreamConfigurations.hub-01.connectionConfiguration.retryIntervalMultiplier=2"
