--- a/artemis/hub-01-broker.yaml
+++ b/artemis/hub-01-broker.yaml
@@ -23,6 +23,16 @@ spec:
       secrets:
         - "oidc-jaas-config"
   acceptors:
+    - name: core-acceptor
+      protocols: core
+      port: 61616
+    - name: cores-acceptor
+      protocols: core
+      port: 61617
+      sslEnabled: true
+      sslSecret: broker-tls-secret
+      needClientAuth: false
+      expose: true
     - name: amqp-acceptor
       protocols: amqp
       port: 5672
@@ -53,8 +63,16 @@ spec:
     - "globalMaxSize=1GiB"
     - "clusterConfigurations.my-cluster.messageLoadBalancingType=OFF"
 
+    - "acceptorConfigurations.cores-acceptor.params.sslAutoReload=true"
     - "acceptorConfigurations.amqps-acceptor.params.sslAutoReload=true"
     - "acceptorConfigurations.mqtts-acceptor.params.sslAutoReload=true"
 
-    - securityRoles.#.producer.send=true
-    - securityRoles.#.consumer.consume=true
+    - securityRoles."messages.#".producer.createAddress=true
+    - securityRoles."messages.#".producer.send=true
+
+    - securityRoles."messages.#".consumer.createAddress=true
+    - securityRoles."messages.#".consumer.createDurableQueue=true
+    - securityRoles."messages.#".consumer.createNonDurableQueue=true
+    - securityRoles."messages.#".consumer.deleteNonDurableQueue=true
+    - securityRoles."messages.#".consumer.browse=true
+    - securityRoles."messages.#".consumer.consume=true
