--- a/artemis/hub-01-broker.yaml
+++ b/artemis/hub-01-broker.yaml
@@ -22,6 +22,7 @@ spec:
     extraMounts:
       secrets:
         - "oidc-jaas-config"
+        - "hub-01-broker-bp"
   acceptors:
     - name: core-acceptor
       protocols: core
@@ -59,20 +60,3 @@ spec:
   console:
     expose: true
     requireLogin: true
-  brokerProperties:
-    - "globalMaxSize=1GiB"
-    - "clusterConfigurations.my-cluster.messageLoadBalancingType=OFF"
-
-    - "acceptorConfigurations.cores-acceptor.params.sslAutoReload=true"
-    - "acceptorConfigurations.amqps-acceptor.params.sslAutoReload=true"
-    - "acceptorConfigurations.mqtts-acceptor.params.sslAutoReload=true"
-
-    - securityRoles."messages.#".producer.createAddress=true
-    - securityRoles."messages.#".producer.send=true
-
-    - securityRoles."messages.#".consumer.createAddress=true
-    - securityRoles."messages.#".consumer.createDurableQueue=true
-    - securityRoles."messages.#".consumer.createNonDurableQueue=true
-    - securityRoles."messages.#".consumer.deleteNonDurableQueue=true
-    - securityRoles."messages.#".consumer.browse=true
-    - securityRoles."messages.#".consumer.consume=true
