--- a/artemis/spoke-01-broker.yaml
+++ b/artemis/spoke-01-broker.yaml
@@ -22,7 +22,18 @@ spec:
     extraMounts:
       secrets:
         - "oidc-jaas-config"
+        - "spoke-01-broker-bp"
   acceptors:
+    - name: core-acceptor
+      protocols: core
+      port: 61616
+    - name: cores-acceptor
+      protocols: core
+      port: 61617
+      sslEnabled: true
+      sslSecret: broker-tls-secret
+      needClientAuth: false
+      expose: true
     - name: amqp-acceptor
       protocols: amqp
       port: 5672
@@ -49,42 +60,3 @@ spec:
   console:
     expose: true
     requireLogin: true
-  brokerProperties:
-    - "globalMaxSize=1GiB"
-    - "clusterConfigurations.my-cluster.messageLoadBalancingType=OFF"
-
-    - "acceptorConfigurations.amqps-acceptor.params.sslAutoReload=true"
-    - "acceptorConfigurations.mqtts-acceptor.params.sslAutoReload=true"
-
-    - "connectorConfigurations.hub-01-connector.params.autoStart=true"
-    - "connectorConfigurations.hub-01-connector.params.host=hub-01-broker-cores-acceptor-0-svc-rte-artemis.${HUB01_DOMAIN}"
-    - "connectorConfigurations.hub-01-connector.params.port=443"
-    - "connectorConfigurations.hub-01-connector.params.sslEnabled=true"
-    - "connectorConfigurations.hub-01-connector.params.trustStorePath=/etc/artemis-broker-tls-secret-volume/client.ts"
-    - "connectorConfigurations.hub-01-connector.params.trustStorePassword=password"
-
-    - "connectorConfigurations.hub-02-connector.params.autoStart=false"
-    - "connectorConfigurations.hub-02-connector.params.host=hub-02-broker-coreos-acceptor-0-svc-rte-artemis.${HUB02_DOMAIN}"
-    - "connectorConfigurations.hub-02-connector.params.port=443"
-    - "connectorConfigurations.hub-02-connector.params.sslEnabled=true"
-    - "connectorConfigurations.hub-02-connector.params.trustStorePath=/etc/artemis-broker-tls-secret-volume/client.ts"
-    - "connectorConfigurations.hub-02-connector.params.trustStorePassword=password"
-
-    - "federationConfigurations.hub-federation.credentials.user=admin"
-    - "federationConfigurations.hub-federation.credentials.password=admin"
-
-    - "federationConfigurations.hub-federation.upstreamConfigurations.hub-upstream.connectionConfiguration.staticConnectors=hub-01-connector,hub-02-connector"
-    - "federationConfigurations.hub-federation.upstreamConfigurations.hub-upstream.connectionConfiguration.retryInterval=500"
-    - "federationConfigurations.hub-federation.upstreamConfigurations.hub-upstream.connectionConfiguration.retryIntervalMultiplier=2"
-    - "federationConfigurations.hub-federation.upstreamConfigurations.hub-upstream.connectionConfiguration.maxRetryInterval=30000"
-    - "federationConfigurations.hub-federation.upstreamConfigurations.hub-upstream.connectionConfiguration.circuitBreakerTimeout=30000"
-    - "federationConfigurations.hub-federation.upstreamConfigurations.hub-upstream.policyRefs=ny-policy,nj-policy,ct-policy,all-policy"
-
-    - "federationConfigurations.hub-federation.addressPolicies.ny-policy.includes.ny-all.addressMatch=messages.NY.#"
-    - "federationConfigurations.hub-federation.addressPolicies.ny-policy.excludes.ny-5603.addressMatch=messages.NY.5603"
-
-    - "federationConfigurations.hub-federation.addressPolicies.nj-policy.includes.nj-all.addressMatch=messages.NJ.#"
-
-    - "federationConfigurations.hub-federation.addressPolicies.ct-policy.includes.ct-all.addressMatch=messages.CT.#"
-
-    - "federationConfigurations.hub-federation.addressPolicies.all-policy.includes.all.addressMatch=messages.ALL.#"
