--- a/artemis/spoke-01-broker.template.properties
+++ b/artemis/spoke-01-broker.template.properties
@@ -1,6 +1,39 @@
 globalMaxSize=1GiB
 clusterConfigurations.my-cluster.messageLoadBalancingType=OFF
 
+securityRoles."messages.#".admin.createAddress=true
+securityRoles."messages.#".admin.deleteAddress=true
+securityRoles."messages.#".admin.send=true
+securityRoles."messages.#".admin.consume=true
+securityRoles."messages.#".admin.browse=true
+securityRoles."messages.#".admin.createDurableQueue=true
+securityRoles."messages.#".admin.deleteDurableQueue=true
+securityRoles."messages.#".admin.createNonDurableQueue=true
+securityRoles."messages.#".admin.deleteNonDurableQueue=true
+securityRoles."messages.#".admin.manage=true
+
+securityRoles."messages.NY.#".admin.createAddress=true
+securityRoles."messages.NY.#".admin.deleteAddress=true
+securityRoles."messages.NY.#".admin.send=true
+securityRoles."messages.NY.#".admin.consume=true
+securityRoles."messages.NY.#".admin.browse=true
+securityRoles."messages.NY.#".admin.createDurableQueue=true
+securityRoles."messages.NY.#".admin.deleteDurableQueue=true
+securityRoles."messages.NY.#".admin.createNonDurableQueue=true
+securityRoles."messages.NY.#".admin.deleteNonDurableQueue=true
+securityRoles."messages.NY.#".admin.manage=true
+
+securityRoles."messages.ALL.#".admin.createAddress=true
+securityRoles."messages.ALL.#".admin.deleteAddress=true
+securityRoles."messages.ALL.#".admin.send=true
+securityRoles."messages.ALL.#".admin.consume=true
+securityRoles."messages.ALL.#".admin.browse=true
+securityRoles."messages.ALL.#".admin.createDurableQueue=true
+securityRoles."messages.ALL.#".admin.deleteDurableQueue=true
+securityRoles."messages.ALL.#".admin.createNonDurableQueue=true
+securityRoles."messages.ALL.#".admin.deleteNonDurableQueue=true
+securityRoles."messages.ALL.#".admin.manage=true
+
 securityRoles."messages.#".producer.createAddress=true
 securityRoles."messages.#".producer.send=true
 
