--- a/artemis/hub-01-broker.template.properties
+++ b/artemis/hub-01-broker.template.properties
@@ -5,6 +5,17 @@ acceptorConfigurations.cores-acceptor.params.sslAutoReload=true
 acceptorConfigurations.amqps-acceptor.params.sslAutoReload=true
 acceptorConfigurations.mqtts-acceptor.params.sslAutoReload=true
 
+securityRoles."messages.#".admin.createAddress=true
+securityRoles."messages.#".admin.deleteAddress=true
+securityRoles."messages.#".admin.send=true
+securityRoles."messages.#".admin.consume=true
+securityRoles."messages.#".admin.browse=true
+securityRoles."messages.#".admin.createDurableQueue=true
+securityRoles."messages.#".admin.deleteDurableQueue=true
+securityRoles."messages.#".admin.createNonDurableQueue=true
+securityRoles."messages.#".admin.deleteNonDurableQueue=true
+securityRoles."messages.#".admin.manage=true
+
 securityRoles."messages.#".producer.createAddress=true
 securityRoles."messages.#".producer.send=true
 
