--- a/artemis/spoke-02-broker.template.properties
+++ b/artemis/spoke-02-broker.template.properties
@@ -12,16 +12,16 @@ securityRoles."messages.#".admin.createNonDurableQueue=true
 securityRoles."messages.#".admin.deleteNonDurableQueue=true
 securityRoles."messages.#".admin.manage=true
 
-securityRoles."messages.NY.#".admin.createAddress=true
-securityRoles."messages.NY.#".admin.deleteAddress=true
-securityRoles."messages.NY.#".admin.send=true
-securityRoles."messages.NY.#".admin.consume=true
-securityRoles."messages.NY.#".admin.browse=true
-securityRoles."messages.NY.#".admin.createDurableQueue=true
-securityRoles."messages.NY.#".admin.deleteDurableQueue=true
-securityRoles."messages.NY.#".admin.createNonDurableQueue=true
-securityRoles."messages.NY.#".admin.deleteNonDurableQueue=true
-securityRoles."messages.NY.#".admin.manage=true
+securityRoles."messages.NJ.#".admin.createAddress=true
+securityRoles."messages.NJ.#".admin.deleteAddress=true
+securityRoles."messages.NJ.#".admin.send=true
+securityRoles."messages.NJ.#".admin.consume=true
+securityRoles."messages.NJ.#".admin.browse=true
+securityRoles."messages.NJ.#".admin.createDurableQueue=true
+securityRoles."messages.NJ.#".admin.deleteDurableQueue=true
+securityRoles."messages.NJ.#".admin.createNonDurableQueue=true
+securityRoles."messages.NJ.#".admin.deleteNonDurableQueue=true
+securityRoles."messages.NJ.#".admin.manage=true
 
 securityRoles."messages.ALL.#".admin.createAddress=true
 securityRoles."messages.ALL.#".admin.deleteAddress=true
@@ -37,12 +37,12 @@ securityRoles."messages.ALL.#".admin.manage=true
 securityRoles."messages.#".producer.createAddress=true
 securityRoles."messages.#".producer.send=true
 
-securityRoles."messages.NY.#".consumer.createAddress=true
-securityRoles."messages.NY.#".consumer.createDurableQueue=true
-securityRoles."messages.NY.#".consumer.createNonDurableQueue=true
-securityRoles."messages.NY.#".consumer.deleteNonDurableQueue=true
-securityRoles."messages.NY.#".consumer.browse=true
-securityRoles."messages.NY.#".consumer.consume=true
+securityRoles."messages.NJ.#".consumer.createAddress=true
+securityRoles."messages.NJ.#".consumer.createDurableQueue=true
+securityRoles."messages.NJ.#".consumer.createNonDurableQueue=true
+securityRoles."messages.NJ.#".consumer.deleteNonDurableQueue=true
+securityRoles."messages.NJ.#".consumer.browse=true
+securityRoles."messages.NJ.#".consumer.consume=true
 
 securityRoles."messages.ALL.#".consumer.createAddress=true
 securityRoles."messages.ALL.#".consumer.createDurableQueue=true
@@ -61,11 +61,11 @@ AMQPConnections.hub-01-connection.user=admin
 AMQPConnections.hub-01-connection.password=admin
 AMQPConnections.hub-01-connection.retryInterval=5000
 AMQPConnections.hub-01-connection.reconnectAttempts=-1
-AMQPConnections.hub-01-connection.federations.spoke-01-federation.type=FEDERATION
-AMQPConnections.hub-01-connection.federations.spoke-01-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.#
-AMQPConnections.hub-01-connection.federations.spoke-01-federation.localAddressPolicies.local-policy.excludes.ny.addressMatch=messages.NY.#
-AMQPConnections.hub-01-connection.federations.spoke-01-federation.remoteAddressPolicies.remote-policy.includes.ny.addressMatch=messages.NY.#
-AMQPConnections.hub-01-connection.federations.spoke-01-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.type=FEDERATION
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.#
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.excludes.nj.addressMatch=messages.NJ.#
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.nj.addressMatch=messages.NJ.#
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.ALL.#
 
 AMQPConnections.hub-02-connection.autoStart=false
 AMQPConnections.hub-02-connection.uri=tcp://hub-02-broker-amqps-acceptor-0-svc-rte-artemis.${HUB02_DOMAIN}:443?sslEnabled=true&trustStorePath=/etc/broker-tls-secret-volume/client.ts&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
@@ -73,8 +73,8 @@ AMQPConnections.hub-02-connection.user=admin
 AMQPConnections.hub-02-connection.password=admin
 AMQPConnections.hub-02-connection.retryInterval=5000
 AMQPConnections.hub-02-connection.reconnectAttempts=-1
-AMQPConnections.hub-02-connection.federations.spoke-01-federation.type=FEDERATION
-AMQPConnections.hub-02-connection.federations.spoke-01-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.#
-AMQPConnections.hub-02-connection.federations.spoke-01-federation.localAddressPolicies.local-policy.excludes.ny.addressMatch=messages.NY.#
-AMQPConnections.hub-02-connection.federations.spoke-01-federation.remoteAddressPolicies.remote-policy.includes.ny.addressMatch=messages.NY.#
-AMQPConnections.hub-02-connection.federations.spoke-01-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.type=FEDERATION
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.#
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.excludes.nj.addressMatch=messages.NJ.#
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.nj.addressMatch=messages.NJ.#
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.ALL.#
