--- a/artemis/spoke-03-broker.template.properties
+++ b/artemis/spoke-03-broker.template.properties
@@ -56,7 +56,7 @@ acceptorConfigurations.amqps-acceptor.params.sslAutoReload=true
 acceptorConfigurations.mqtts-acceptor.params.sslAutoReload=true
 
 AMQPConnections.hub-01-connection.autoStart=true
-AMQPConnections.hub-01-connection.uri=tcp://hub-01-broker-amqps-acceptor-0-svc-rte-artemis.${HUB01_DOMAIN}:443?sslEnabled=true&trustStorePath=/etc/broker-tls-secret-volume/client.ts&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
+AMQPConnections.hub-01-connection.uri=tcp://hub-01-broker-amqps-acceptor-0-svc-rte-artemis.${HUB01_DOMAIN}:443?sslEnabled=true&trustStorePath=${TRUSTSTORE_PATH}&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
 AMQPConnections.hub-01-connection.user=admin
 AMQPConnections.hub-01-connection.password=admin
 AMQPConnections.hub-01-connection.retryInterval=5000
@@ -68,7 +68,7 @@ AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressP
 AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.ALL.#
 
 AMQPConnections.hub-02-connection.autoStart=false
-AMQPConnections.hub-02-connection.uri=tcp://hub-02-broker-amqps-acceptor-0-svc-rte-artemis.${HUB02_DOMAIN}:443?sslEnabled=true&trustStorePath=/etc/broker-tls-secret-volume/client.ts&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
+AMQPConnections.hub-02-connection.uri=tcp://hub-02-broker-amqps-acceptor-0-svc-rte-artemis.${HUB02_DOMAIN}:443?sslEnabled=true&trustStorePath=${TRUSTSTORE_PATH}&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
 AMQPConnections.hub-02-connection.user=admin
 AMQPConnections.hub-02-connection.password=admin
 AMQPConnections.hub-02-connection.retryInterval=5000
