--- a/artemis/hub-01-broker.yaml
+++ b/artemis/hub-01-broker.yaml
@@ -7,11 +7,11 @@ spec:
   adminPassword: "admin"
   deploymentPlan:
     size: 1
-    persistenceEnabled: true
+    persistenceEnabled: false
     journalType: nio
     enableMetricsPlugin: true
-    storage:
-      size: 1Gi
+#    storage:
+#      size: 1Gi
     resources:
       limits:
         cpu: "1000m"
