--- a/artemis/spoke-02-broker.template.properties
+++ b/artemis/spoke-02-broker.template.properties
@@ -37,6 +37,8 @@ securityRoles."messages.ALL.#".admin.manage=true
 securityRoles."messages.#".producer.createAddress=true
 securityRoles."messages.#".producer.send=true
 
+securityRoles."messages.NJ.#".producer.createAddress=true
+securityRoles."messages.NJ.#".producer.send=true
 securityRoles."messages.NJ.#".consumer.createAddress=true
 securityRoles."messages.NJ.#".consumer.createDurableQueue=true
 securityRoles."messages.NJ.#".consumer.createNonDurableQueue=true
@@ -44,6 +46,8 @@ securityRoles."messages.NJ.#".consumer.deleteNonDurableQueue=true
 securityRoles."messages.NJ.#".consumer.browse=true
 securityRoles."messages.NJ.#".consumer.consume=true
 
+securityRoles."messages.ALL.#".producer.createAddress=true
+securityRoles."messages.ALL.#".producer.send=true
 securityRoles."messages.ALL.#".consumer.createAddress=true
 securityRoles."messages.ALL.#".consumer.createDurableQueue=true
 securityRoles."messages.ALL.#".consumer.createNonDurableQueue=true
@@ -51,30 +55,24 @@ securityRoles."messages.ALL.#".consumer.deleteNonDurableQueue=true
 securityRoles."messages.ALL.#".consumer.browse=true
 securityRoles."messages.ALL.#".consumer.consume=true
 
-acceptorConfigurations.cores-acceptor.params.sslAutoReload=true
-acceptorConfigurations.amqps-acceptor.params.sslAutoReload=true
-acceptorConfigurations.mqtts-acceptor.params.sslAutoReload=true
-
-AMQPConnections.hub-01-connection.autoStart=true
+AMQPConnections.hub-01-connection.autostart=true
 AMQPConnections.hub-01-connection.uri=tcp://hub-01-broker-amqps-acceptor-0-svc-rte-artemis.${HUB01_DOMAIN}:443?sslEnabled=true&trustStorePath=${TRUSTSTORE_PATH}&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
 AMQPConnections.hub-01-connection.user=admin
 AMQPConnections.hub-01-connection.password=admin
 AMQPConnections.hub-01-connection.retryInterval=5000
 AMQPConnections.hub-01-connection.reconnectAttempts=-1
 AMQPConnections.hub-01-connection.federations.spoke-02-federation.type=FEDERATION
-AMQPConnections.hub-01-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.#
-AMQPConnections.hub-01-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.excludes.nj.addressMatch=messages.NJ.#
-AMQPConnections.hub-01-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.nj.addressMatch=messages.NJ.#
-AMQPConnections.hub-01-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.nj.addressMatch=messages.NJ.#
+AMQPConnections.hub-01-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.#
 
-AMQPConnections.hub-02-connection.autoStart=false
+AMQPConnections.hub-02-connection.autostart=false
 AMQPConnections.hub-02-connection.uri=tcp://hub-02-broker-amqps-acceptor-0-svc-rte-artemis.${HUB02_DOMAIN}:443?sslEnabled=true&trustStorePath=${TRUSTSTORE_PATH}&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
 AMQPConnections.hub-02-connection.user=admin
 AMQPConnections.hub-02-connection.password=admin
 AMQPConnections.hub-02-connection.retryInterval=5000
 AMQPConnections.hub-02-connection.reconnectAttempts=-1
 AMQPConnections.hub-02-connection.federations.spoke-02-federation.type=FEDERATION
-AMQPConnections.hub-02-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.#
-AMQPConnections.hub-02-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.excludes.nj.addressMatch=messages.NJ.#
-AMQPConnections.hub-02-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.nj.addressMatch=messages.NJ.#
-AMQPConnections.hub-02-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.localAddressPolicies.local-policy.includes.nj.addressMatch=messages.NJ.#
+AMQPConnections.hub-02-connection.federations.spoke-02-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.#
