--- a/artemis/login.config
+++ b/artemis/login.config
@@ -6,7 +6,7 @@ console {
 
   /*
   org.keycloak.adapters.jaas.BearerTokenLoginModule required
-    keycloak-config-file="/amq/extra/secrets/oidc-jaas-config/_keycloak-bearer-token.json"
+    keycloak-config-file="${BEARER_KC_CONFIG}"
     role-principal-class=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal
   ;
   */
@@ -19,7 +19,7 @@ activemq {
   ;
 
   org.keycloak.adapters.jaas.DirectAccessGrantsLoginModule required
-    keycloak-config-file="/amq/extra/secrets/oidc-jaas-config/_keycloak-direct-access.json"
+    keycloak-config-file="${DIRECT_KC_CONFIG}"
     role-principal-class=org.apache.activemq.artemis.spi.core.security.jaas.RolePrincipal
   ;
 
