--- a/artemis/hub-02-broker.template.properties
+++ b/artemis/hub-02-broker.template.properties
@@ -25,3 +25,11 @@ securityRoles."messages.#".consumer.createNonDurableQueue=true
 securityRoles."messages.#".consumer.deleteNonDurableQueue=true
 securityRoles."messages.#".consumer.browse=true
 securityRoles."messages.#".consumer.consume=true
+
+addressSettings."messages.#".autoDeleteAddresses=true
+addressSettings."messages.#".autoDeleteAddressesDelay=0
+addressSettings."messages.#".autoDeleteQueues=true
+addressSettings."messages.#".autoDeleteCreatedQueues=true
+addressSettings."messages.#".autoDeleteQueuesDelay=0
+addressSettings."messages.#".autoDeleteQueuesMessageCount=1000
+addressSettings."messages.#".defaultPurgeOnNoConsumers=true
