--- a/artemis/spoke-03-broker.template.properties
+++ b/artemis/spoke-03-broker.template.properties
@@ -55,16 +55,42 @@ securityRoles."messages.ALL.#".consumer.deleteNonDurableQueue=true
 securityRoles."messages.ALL.#".consumer.browse=true
 securityRoles."messages.ALL.#".consumer.consume=true
 
+addressSettings."messages.#".autoDeleteAddresses=true
+addressSettings."messages.#".autoDeleteAddressesDelay=0
+addressSettings."messages.#".autoDeleteQueues=true
+addressSettings."messages.#".autoDeleteCreatedQueues=true
+addressSettings."messages.#".autoDeleteQueuesDelay=0
+addressSettings."messages.#".autoDeleteQueuesMessageCount=1000
+addressSettings."messages.#".defaultPurgeOnNoConsumers=true
+
 AMQPConnections.hub-01-connection.autostart=true
 AMQPConnections.hub-01-connection.uri=tcp://hub-01-broker-amqps-acceptor-0-svc-rte-artemis.${HUB01_DOMAIN}:443?sslEnabled=true&trustStorePath=${TRUSTSTORE_PATH}&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
 AMQPConnections.hub-01-connection.user=admin
 AMQPConnections.hub-01-connection.password=admin
 AMQPConnections.hub-01-connection.retryInterval=5000
 AMQPConnections.hub-01-connection.reconnectAttempts=-1
+
 AMQPConnections.hub-01-connection.federations.spoke-03-federation.type=FEDERATION
+
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.autoDelete=true
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.autoDeleteDelay=0
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.autoDeleteMessageCount=1000
 AMQPConnections.hub-01-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.ALL.#
 AMQPConnections.hub-01-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.includes.ct.addressMatch=messages.CT.#
-AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.#
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.excludes.5604.addressMatch=messages.*.5604
+
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.autoDelete=true
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.autoDeleteDelay=0
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.autoDeleteMessageCount=1000
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.includes.wild.addressMatch=messages.#
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.excludes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.excludes.ct.addressMatch=messages.CT.#
+
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.autoDelete=true
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.autoDeleteDelay=0
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.autoDeleteMessageCount=1000
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.maxHops=1
+AMQPConnections.hub-01-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.includes.5604.addressMatch=messages.*.5604
 
 AMQPConnections.hub-02-connection.autostart=false
 AMQPConnections.hub-02-connection.uri=tcp://hub-02-broker-amqps-acceptor-0-svc-rte-artemis.${HUB02_DOMAIN}:443?sslEnabled=true&trustStorePath=${TRUSTSTORE_PATH}&trustStorePassword=password&trustStoreType=PKCS12&trustStoreProvider=SUN
@@ -72,7 +98,25 @@ AMQPConnections.hub-02-connection.user=admin
 AMQPConnections.hub-02-connection.password=admin
 AMQPConnections.hub-02-connection.retryInterval=5000
 AMQPConnections.hub-02-connection.reconnectAttempts=-1
+
 AMQPConnections.hub-02-connection.federations.spoke-03-federation.type=FEDERATION
+
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.autoDelete=true
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.autoDeleteDelay=0
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.autoDeleteMessageCount=1000
 AMQPConnections.hub-02-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.includes.all.addressMatch=messages.ALL.#
 AMQPConnections.hub-02-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.includes.ct.addressMatch=messages.CT.#
-AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.includes.all.addressMatch=messages.#
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.localAddressPolicies.local-policy.excludes.5604.addressMatch=messages.*.5604
+
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.autoDelete=true
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.autoDeleteDelay=0
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.autoDeleteMessageCount=1000
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.includes.wild.addressMatch=messages.#
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.excludes.all.addressMatch=messages.ALL.#
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy.excludes.ct.addressMatch=messages.CT.#
+
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.autoDelete=true
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.autoDeleteDelay=0
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.autoDeleteMessageCount=1000
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.maxHops=1
+AMQPConnections.hub-02-connection.federations.spoke-03-federation.remoteAddressPolicies.remote-policy-5604.includes.5604.addressMatch=messages.*.5604
