--- a/prometheus/prometheus-additional-scrape-secret.yaml
+++ b/prometheus/prometheus-additional-scrape-secret.yaml
@@ -91,3 +91,13 @@ stringData:
         regex: (.+)
         target_label: __metrics_path__
         replacement: /api/v1/nodes/${1}/proxy/metrics
+
+    - job_name: spoke-02-broker
+      scrape_interval: 30s
+      scrape_timeout: 10s
+      scheme: http
+      basic_auth:
+        username: "admin"
+        password: "admin"
+      static_configs:
+        - targets: ['73.229.244.230:8161']
